adição de um novo campo chamado director e title sendo passado como campo obrigatorio a ser preenchido
